# bot_package

./: README.md  setup.cfg  setup.py
tgb.egg-info/: PKG-INFO
